      using the -D option (that now takes an argument)
    * there is a small utility xdbfiletool that helps accessing xdb_file's
      new directory layout and that can convert old spools to the new
      format
    * jabberd14 will now try to establish s2s connections not only on the
      first IPv4/IPv6 address it finds in DNS but on any IPv4/IPv6 address,
      that can be found for the first matching service. (It will not fall
      back to pure AAAA or A records if there has been a SRV record for
      any configured service.)
      This will now allow a jabberd14, that has been configured with
      --enable-ipv6, to be used on systems without IPv6 routing as well.
    * jabberd14 now requires at least openssl version 0.9.7 to be build with
      support for SSL
    * support for legacy jabberd 1.0 server to server communication is now
      disabled by default as it has no protection against identity spoofing
    * jabberd14 now supports clustering of the s2s component. The distribution
      among the components for incoming connections has to be managed using
      DNS records. For outgoing connections the DNS resolver (dnsrv) is
      responsible for distributing the connections among the components
    * Better XMPP compatibility: JIDs are prepared by the applicable stringprep
      profiles; subscription state changes are only made if allowed,
      contacts cannot push themself on a user's roster; correct stanza errors
      are created
    * jabberd14 now supports encrypted connections using the STARTTLS
      stream feature of XMPP
    * The xdb_file module allows two directory layouts. The classic jabberd14
      layout with one big directory containing all files for one domain, and
      the layout adopted from wpjabber, where the files are distributed over
      256 * 256 different directories, improoving performance on filesystems,
      that are not well suited for large directories.